--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,15 @@
     }
   },
   "routes": [
-    { "src": "/(.*)\\.php", "dest": "/api/$1.php" },
+    { "src": "/(.*)\\.css$", "headers": { "Content-Type": "text/css" }, "dest": "/$1.css" },
+    { "src": "/(.*)\\.js$", "headers": { "Content-Type": "text/javascript" }, "dest": "/$1.js" },
+    { "src": "/(.*)\\.png$", "headers": { "Content-Type": "image/png" }, "dest": "/$1.png" },
+    { "src": "/(.*)\\.jpg$", "headers": { "Content-Type": "image/jpeg" }, "dest": "/$1.jpg" },
+    { "src": "/(.*)\\.jpeg$", "headers": { "Content-Type": "image/jpeg" }, "dest": "/$1.jpeg" },
+    { "src": "/(.*)\\.gif$", "headers": { "Content-Type": "image/gif" }, "dest": "/$1.gif" },
+    { "src": "/(.*)\\.ico$", "headers": { "Content-Type": "image/x-icon" }, "dest": "/$1.ico" },
+
+    { "src": "/(.*)\\.php$", "dest": "/api/index.php" },
     { "src": "/(.*)", "dest": "/api/index.php" }
   ]
 } 
